# alis-studio

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  app.py  desktop.py  pyproject.toml  requirements.txt
packaging/: build_dmg.sh  make_icon.py
studio/: __init__.py  _enhance_worker.py  desktop.py  download.py  prompt_rewrite.py  registry.py  server.py
studio/backends/: base.py  cyber_z.py  ernie.py  flux2.py  krea2.py  mflux_common.py  mflux_models.py  qwen_edit.py  upscale.py  z_image.py
web/: index.html
